Change deprecated features